{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 14,
  "lineage": "d0b9bfd5-2c97-224d-8191-6594283cdadc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_learning_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926626521:internet-gateway/igw-0887930b252401096",
            "id": "igw-0887930b252401096",
            "owner_id": "831926626521",
            "tags": {
              "Name": "Terraform-Learning-GW"
            },
            "tags_all": {
              "Name": "Terraform-Learning-GW"
            },
            "vpc_id": "vpc-06f6e3f889d12be49"
          },
          "dependencies": [
            "aws_vpc.tf_learning_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_learning_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926626521:route-table/rtb-0b8530bbf971dcc73",
            "id": "rtb-0b8530bbf971dcc73",
            "owner_id": "831926626521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0887930b252401096",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Learning-RT"
            },
            "tags_all": {
              "Name": "Terraform-Learning-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f6e3f889d12be49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_learning_gw",
            "aws_vpc.tf_learning_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_learning_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa99022b5e6ed36",
            "route_table_id": "rtb-0b8530bbf971dcc73",
            "subnet_id": "subnet-0a11cdb16e58caadb"
          },
          "dependencies": [
            "aws_internet_gateway.tf_learning_gw",
            "aws_route_table.tf_learning_rt",
            "aws_subnet.tf_learning_subnet",
            "aws_vpc.tf_learning_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_learning_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926626521:security-group/sg-0234629ba5e285bca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0234629ba5e285bca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250303120643968900000002",
            "name_prefix": "terraform-",
            "owner_id": "831926626521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Learning-SG"
            },
            "tags_all": {
              "Name": "Terraform-Learning-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f6e3f889d12be49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_learning_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_learning_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926626521:subnet/subnet-0a11cdb16e58caadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a11cdb16e58caadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926626521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Learning-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Learning-Subnet"
            },
            "vpc_id": "vpc-06f6e3f889d12be49"
          },
          "dependencies": [
            "aws_vpc.tf_learning_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_learning_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926626521:vpc/vpc-06f6e3f889d12be49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bdc518d854e05db",
            "default_route_table_id": "rtb-08820aef4fa4a4727",
            "default_security_group_id": "sg-0072e3e90b7127bab",
            "dhcp_options_id": "dopt-0b7e74e33afbadec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f6e3f889d12be49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08820aef4fa4a4727",
            "owner_id": "831926626521",
            "tags": {
              "Name": "Terraform-Learning-VPC"
            },
            "tags_all": {
              "Name": "Terraform-Learning-VPC"
            }
          }
        }
      ]
    }
  ]
}